--- a/app/views/billboards/index.html.erb
+++ b/app/views/billboards/index.html.erb
@@ -1,2 +1,5 @@
-<h1>Billboards#index</h1>
+<div class = "container">
+
+<h1 class = "header">Billboards#index</h1>
 <p>Find me in app/views/billboards/index.html.erb</p>
+</div>
