added bulma instead

--- a/app/views/billboards/index.html.erb
+++ b/app/views/billboards/index.html.erb
@@ -1,5 +1,16 @@
 <div class = "container">
 
-<h1 class = "header">Billboards#index</h1>
+<section class="hero">
+  <div class="hero-body">
+    <div class="container">
+      <h1 class="title">
+        Billboards
+      </h1>
+      <h2 class="subtitle">
+        Hero subtitle
+      </h2>
+    </div>
+  </div>
+</section>
 <p>Find me in app/views/billboards/index.html.erb</p>
 </div>
