--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
   </head>
 
   <body>
-    <%= yield %>
+  <%= render partial: "/layouts/navbar"%>
+    <div class = "container">
+      <%= yield %>
+    </div>
   </body>
 </html>
