--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
-    <a class="navbar-item" href="<%link_to billboards_path%>">
+    <a class="navbar-item" href="<%link_to root_path%>">
       <img src="https://i.ytimg.com/vi/CDvyTMdiggA/maxresdefault.jpg" width="112" height="28">
     </a>
 
@@ -13,45 +13,25 @@
 
   <div id="navbarBasicExample" class="navbar-menu">
     <div class="navbar-start">
-      <a class="navbar-item">
-        Home
-      </a>
+     
 
       <a class="navbar-item">
         Artists
       </a>
+      <a class="navbar-item">
+        Songs
+      </a>
 
-      <div class="navbar-item has-dropdown is-hoverable">
-        <a class="navbar-link">
-          More
-        </a>
-
-        <div class="navbar-dropdown">
-          <a class="navbar-item">
-            Top 100's
-          </a>
-          <a class="navbar-item">
-            Classical
-          </a>
-          <a class="navbar-item">
-            Disney
-          </a>
-          <hr class="navbar-divider">
-          <a class="navbar-item">
-            Report an issue
-          </a>
-        </div>
-      </div>
     </div>
 
     <div class="navbar-end">
       <div class="navbar-item">
         <div class="buttons">
-          <a class="button">
-            <strong>Artists</strong>
-          </a>
+          <strong class= "button">
+          <%= link_to "Home", billboards_path%></strong>
+         
           <a class="button is-light">
-            Log in
+            
           </a>
         </div>
       </div>
