--- a/app/views/billboards/new.html.erb
+++ b/app/views/billboards/new.html.erb
@@ -1,2 +1,13 @@
-<h1>Billboards#new</h1>
-<p>Find me in app/views/billboards/new.html.erb</p>
+<section class="hero">
+  <div class="hero-body">
+    <div class="container">
+      <h1 class="title">
+        Billboards
+      </h1>
+      <h2 class="subtitle">
+        Create New Billboard
+      </h2>
+    </div>
+  </div>
+</section>
+
