We're gonna try semantic

--- a/app/views/billboards/new.html.erb
+++ b/app/views/billboards/new.html.erb
@@ -11,3 +11,10 @@
   </div>
 </section>
 
+<button class = "button">
+<%= render "form", billboard: @billboard%>
+</button>
+<button class = "button">
+<%= link_to "Back", billboards_path%>
+</button>
+
