user design issues and button issues

--- a/app/views/billboards/edit.html.erb
+++ b/app/views/billboards/edit.html.erb
@@ -11,5 +11,5 @@
   </div>
 </section>
 <%= render "form", billboard: @billboard%>
-<%= link_to "Show", billboards_path(@billboard), class: "button"%>
+<%= link_to "Show", billboard_path(@billboard), class: "button"%>
 <%= link_to "Back", billboards_path, class: "button"%>
