--- a/app/views/billboards/show.html.erb
+++ b/app/views/billboards/show.html.erb
@@ -1,31 +1,12 @@
-<h1>Billboards#show</h1>
-<p>Find me in app/views/billboards/show.html.erb</p>
+<h1 style = "text-align:center; font-size:50px;">Billboard's <%=@billboard.name%></h1>
 
-<div class="card">
-  <div class="card-image">
-    <figure class="image is-4by3">
-      <img src="https://robohash.org/<%=@artist.full_name%>?set=set4" alt="Placeholder image">
-    </figure>
-  </div>
-  <div class="card-content">
-    <div class="media">
-      <div class="media-left">
-        <figure class="image is-48x48">
-          <img src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
-        </figure>
-      </div>
-      <div class="media-content">
-        <p class="title is-4"><%=@artist.full_name%></p>
-        <p class="subtitle is-6">@johnsmith</p>
-      </div>
-    </div>
 
-    <div class="content">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-      Phasellus nec iaculis mauris. <a>@bulmaio</a>.
-      <a href="#">#css</a> <a href="#">#responsive</a>
-      <br>
-      <time datetime="2016-1-1">11:09 PM - 1 Jan 2016</time>
-    </div>
-  </div>
+<div class = "button-div" style = "display:flex; justify-content:center;">
+<button class = "button">
+<%= link_to "Back", billboards_path%>
+</button>
+<button class = "button"><%= link_to "Edit", edit_billboard_path(@billboard)%>
+</button>
 </div>
+
+
