--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -1,2 +1,12 @@
-<h1>Artists#show</h1>
-<p>Find me in app/views/artists/show.html.erb</p>
+<h1 style = "text-align:center; font-size:50px;"><%=@artist.full_name%></h1>
+
+
+<div class = "button-div" style = "display:flex; justify-content:center;">
+<button class = "button">
+<%= link_to "Back", artists_path%>
+</button>
+<button class = "button"><%= link_to "Edit", edit_artist_path(@artist)%>
+</button>
+</div>
+
+
