genre shows in artist

--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -1,4 +1,7 @@
 <h1 style = "text-align:center; font-size:50px;"><%=@artist.full_name%></h1>
+<h2 style = "text-align:center; font-size:30px;">
+<%=@artist.genre%>
+</h2>
 
 
 <div class = "button-div" style = "display:flex; justify-content:center;">
