Trying to connect billboard and song

--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -30,7 +30,7 @@
 <%end%>
 
 
-
+<%= link_to "Billboards", billboards_path, class: "button"%>
 
 <%= link_to "New Artist", new_artist_path, class: "button"%>
 
