--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,7 +1,8 @@
 <h1>Songs#index</h1>
 <p>Find me in app/views/songs/index.html.erb</p>
 
-<%= @billboard.songs.each do |s|%>
-
+<% @songs.each do |s|%>
+<% if s.on_billboard ==true%>
 <%=s.name%>
+<%end%>
 <%end%>
