--- a/app/views/billboards/show.html.erb
+++ b/app/views/billboards/show.html.erb
@@ -1,4 +1,6 @@
-<h1 style = "text-align:center; font-size:50px;">Billboard's <%=@billboard.name%></h1>
+<h1 style = "text-align:center; font-size:50px;">Billboard's <strong><%=@billboard.name%></strong></h1>
+<hr />
+<br />
 
 
 
