--- a/app/views/songs/_song.html.erb
+++ b/app/views/songs/_song.html.erb
@@ -1,3 +1,4 @@
 <hr />
 <p><strong><em><%= song.name %></em></strong></p>
+<button class = "button"><%=link_to "Edit Song", edit_artist_song_path(@artist)%></button>
 <hr/>
