trying to add billboard_id

--- a/app/views/songs/_form.html.erb
+++ b/app/views/songs/_form.html.erb
@@ -8,6 +8,7 @@
     <%= f.label :Fill_out %>
     <%= f.text_field :name, required: true, placeholder: "Song Name", class: "input" %>
      <%= f.text_field :genre, required: true, placeholder: "Country, Rock, Classical", class: "input" %>
+     <%= f.number_field :billboard_id%>
     
    
   </p>
