--- a/app/views/songs/_form.html.erb
+++ b/app/views/songs/_form.html.erb
@@ -12,6 +12,7 @@
    
   </p>
 </div>
+<%= f.label :on_billboard%>
     <%= f.check_box :on_billboard, class: "field" %>
 <%= f.submit nil, class: "ui button is-primary" %>
 <% end %>
