trying to get crud with songs

--- a/app/views/billboards/show.html.erb
+++ b/app/views/billboards/show.html.erb
@@ -2,9 +2,11 @@
 <hr />
 <br />
 
+<%# @songs.each do |song| %>
+  <%#= render 'songs/song_index', { song: song } %>
+<%#end %>
 
-
-<%#= render "/songs/song_index"%>
+<%#= render "/songs/song_index", {billboard: billboard, song: song}%>
 
 
 <div class = "button-div" style = "display:flex; justify-content:center;">
