--- a/app/views/songs/edit.html.erb
+++ b/app/views/songs/edit.html.erb
@@ -2,11 +2,9 @@
   <div class="hero-body">
     <div class="container">
       <h1 class="title">
-       SONG
+       <%@artist.first_name%>
       </h1>
-      <h2 class="subtitle">
-        By <%@artist.full_name%>
-      </h2>
+     
     </div>
   </div>
 </section>
