minor look adjustments

--- a/app/views/songs/_song_index.html.erb
+++ b/app/views/songs/_song_index.html.erb
@@ -1,5 +1,5 @@
 <% song.each do |s|%>
-<% if s.on_billboard ==true && s.genre == "rock"%>
+<% if s.on_billboard ==true%>
 <%=s.name%>
 <%end%>
 <%end%>
