--- a/app/views/billboards/show.html.erb
+++ b/app/views/billboards/show.html.erb
@@ -11,13 +11,12 @@
 
 <div class = "button-div" style = "display:flex; justify-content:center;">
 <button class = "button">
-<%= link_to "Back", billboards_path%>
+<%= link_to "Show Songs", billboard_songs_path(@billboard)%>
 </button>
 <button class = "button">
-<%= link_to "Song Index", billboard_songs_path(@billboard)%>
+<%= link_to "Back", billboards_path%>
 </button>
-<button class = "button"><%= link_to "Edit", edit_billboard_path(@billboard)%>
-</button>
+
 </div>
 
 
