--- a/app/views/billboards/show.html.erb
+++ b/app/views/billboards/show.html.erb
@@ -9,6 +9,13 @@
 <%#= render "/songs/song_index", {billboard: billboard, song: song}%>
 
 <%#= render "song_index", song: @song%>
+<ol>
+<% @songs.each do |s|%>
+<% if s.on_billboard ==true && s.genre == "classical"%>
+<li><%=s.name%></li>
+<%end%>
+<%end%>
+</ol>
 <div class = "button-div" style = "display:flex; justify-content:center;">
 <button class = "button">
 <%= link_to "Show Songs", billboard_songs_path(@billboard)%>
